--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -18,5 +18,7 @@
 {% endblock %}
 {% block scripts %}
     {{ super() }}
+{#    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>#}
+{#    <script src="{{ url_for("static", filename="js/admin_main.js") }}"></script>#}
 {% endblock %}
 
